changed NETSGPClient lib from local copy to dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	https://github.com/khoih-prog/ESPAsyncWebServer.git
 	bblanchon/ArduinoJson@5.13.4
 	https://github.com/tzapu/WiFiManager.git
+	atc1441/NETSGPClient@^2.0.0
