Added possibility to update the ESP firmware via Wifi/Browser ( http://<ESP-IP>/update ) by using ElegantOTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:OpenDTU-qnd]
+[env:OpenNETek]
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
@@ -21,3 +21,4 @@ lib_deps =
 	bblanchon/ArduinoJson@5.13.4
 	https://github.com/tzapu/WiFiManager.git
 	atc1441/NETSGPClient@^2.0.0
+	ayushsharma82/AsyncElegantOTA@^2.2.7
