Added Support for ESP32-C3

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:OpenNETek]
-platform = espressif32
-board = az-delivery-devkit-v4
+[platformio]
+default_envs = esp32c3
+
+
+[env]
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps = 
@@ -22,3 +24,16 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git
 	atc1441/NETSGPClient@^2.0.0
 	https://github.com/flowerysong/AsyncElegantOTA.git
+
+[env:esp32]
+platform = espressif32
+board = az-delivery-devkit-v4
+build_flags = -DESP32WROOM
+monitor_filters = esp32_exception_decoder
+
+
+[env:esp32c3]
+platform = https://github.com/platformio/platform-espressif32.git
+board = seeed_xiao_esp32c3
+build_flags = -DESP32C3
+monitor_filters = esp32_exception_decoder
