--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ lib_deps =
 	https://github.com/khoih-prog/ESPAsyncWebServer.git
 	bblanchon/ArduinoJson@5.13.4
 	https://github.com/tzapu/WiFiManager.git
-	atc1441/NETSGPClient@^2.0.0
+	https://github.com/atc1441/NETSGPClient.git
 	https://github.com/flowerysong/AsyncElegantOTA.git
 
 [env:esp32]
@@ -33,7 +33,7 @@ monitor_filters = esp32_exception_decoder
 
 
 [env:esp32c3]
-platform = https://github.com/platformio/platform-espressif32.git
+platform = espressif32
 board = seeed_xiao_esp32c3
 build_flags = -DESP32C3
 monitor_filters = esp32_exception_decoder
