Added compatibility to ESP8266 Changed WifiManager to AsyncWifimanager
a lot of small changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32c3
+default_envs = esp8266
 
 
 [env]
@@ -21,13 +21,15 @@ lib_deps =
 	https://github.com/pidpawel/AsyncTCP.git
 	https://github.com/khoih-prog/ESPAsyncWebServer.git
 	bblanchon/ArduinoJson@5.13.4
-	https://github.com/tzapu/WiFiManager.git
 	https://github.com/atc1441/NETSGPClient.git
 	https://github.com/flowerysong/AsyncElegantOTA.git
-
+	https://github.com/khoih-prog/ESPAsync_WiFiManager.git
+	
 [env:esp32]
 platform = espressif32
 board = az-delivery-devkit-v4
+lib_deps =
+	${env.lib_deps}
 build_flags = -DESP32WROOM
 monitor_filters = esp32_exception_decoder
 
@@ -35,5 +37,14 @@ monitor_filters = esp32_exception_decoder
 [env:esp32c3]
 platform = espressif32
 board = seeed_xiao_esp32c3
+lib_deps =
+	${env.lib_deps}
 build_flags = -DESP32C3
 monitor_filters = esp32_exception_decoder
+
+[env:esp8266]
+platform = espressif8266
+board = nodemcuv2
+lib_deps =
+	${env.lib_deps}
+build_flags = -DESP8266
